--- a/SistemaGestionPeliculas/src/frontend/usuario/InterfazUsuario.form
+++ b/SistemaGestionPeliculas/src/frontend/usuario/InterfazUsuario.form
@@ -253,11 +253,11 @@
                       <Color blue="e6" green="e6" red="e6" type="rgb"/>
                     </Property>
                     <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-                      <Table columnCount="4" rowCount="4">
-                        <Column editable="false" title="Title 1" type="java.lang.Object"/>
-                        <Column editable="false" title="Title 2" type="java.lang.Object"/>
-                        <Column editable="false" title="Title 3" type="java.lang.Object"/>
-                        <Column editable="false" title="Title 4" type="java.lang.Object"/>
+                      <Table columnCount="4" rowCount="0">
+                        <Column editable="false" title="Title 1" type="java.lang.String"/>
+                        <Column editable="false" title="Title 2" type="java.lang.String"/>
+                        <Column editable="false" title="Title 3" type="java.lang.String"/>
+                        <Column editable="false" title="Title 4" type="java.lang.String"/>
                       </Table>
                     </Property>
                     <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
